<resources>
    <string name="app_name">Nanadetect</string>
    <string name="take_picture">Take Picture</string>
    <string name="classified_as">Classified as:</string>
    <string name="confidences">Confidences:</string>
    <string name="todo">TODO</string>
    <string name="takepicture">Take Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="confidence">Confidence:</string>
    <string name="classification">Classification:</string>
    <string name="imageName" />
    <string name="centerpic">TODO</string>
    <string name="logo">TODO</string>
    <string name="confidencerate" />
    <string name="background">TODO</string>
    <string name="aidicon">TODO</string>
    <string name="square">TODO</string>
    <string name="rectangle">TODO</string>
    <string name="title">Treatment on Cavendish Banana Disease</string>
    <string name="description1">Application of specific fungicides can help manage Black Sigatoka. Chemicals like azoxystrobin, propiconazole, or mancozeb can be effective. Consult with local agricultural experts for recommended fungicides and their proper usage.</string>
    <string name="description2">Remove infected leaves regularly to prevent the spread of the disease.</string>
    <string name="description3">Maintain proper spacing between plants to improve airflow, reducing humidity, and promoting faster drying of leaves, which can help inhibit the fungus\'s growth.</string>
    <string name="description4">Regular applications of approved fungicides can prevent the onset of Black Sigatoka. Follow recommended schedules for spraying.</string>
    <string name="description5">Avoid over-watering to reduce humidity levels, as high moisture encourages fungal growth.</string>
    <string name="description6">Rotate banana crops with other plants to disrupt the life cycle of the fungus.</string>
    <string name="description7">Regularly inspect plants for early signs of disease to take immediate action.</string>
    <string name="fwdescription1">There are no effective chemical treatments for Fusarium wilt in established plants. However, some soil treatments and biocontrol agents may help reduce its impact. Soil solarization and application of biological control agents might assist in managing the disease.</string>
    <string name="fwdescription2">If a plant is severely infected, removing it entirely can prevent the spread of the disease to other nearby plants.</string>
    <string name="fw_treatment2">Removing Infected Plants:</string>
    <string name="preventdescription1">Use banana varieties that are resistant to Fusarium wilt when available.</string>
    <string name="preventdescription2">Ensure good drainage and avoid waterlogging, as Fusarium wilt thrives in moist conditions.</string>
    <string name="preventdescription3">Practice good sanitation by removing and destroying infected plant parts, avoiding the spread of the disease.</string>
    <string name="preventdescription4">Introduce new plants to your garden only after ensuring they are disease-free.</string>
    <string name="tipsdscrpt1">Ensure proper fertilization, especially with potassium, which can improve the plant\'s resistance to diseases.</string>
    <string name="tipsdscrpt2">Regularly remove old and diseased leaves to maintain plant health.</string>
    <string name="tipsdscrpt3">Disinfect gardening tools to prevent transferring diseases from one plant to another.</string>
    <string name="fw_image">fw_image</string>
    <string name="button3">Treatment</string>
    <string name="try_another_image">Cannot classify image</string>
    <string name="image">Image:</string>
    <string name="banana_leaf">Banana Leaf</string>
    <string name="not_banana_leaf">Not a Banana Leaf</string>
    <string name="remove_infected_plants">Remove Infected Plants:</string>
    <string name="mokodes1">As with BBTV, the removal and destruction of infected plants are crucial to prevent the further spread of Moko Disease.</string>
    <string name="quarantine_measures">Quarantine Measures:</string>
    <string name="mokodes2">Implementing quarantine measures to restrict the movement of infected plant material can help contain the disease.</string>
    <string name="disinfection">Disinfection:</string>
    <string name="mokodes3">Disinfecting tools and equipment used in banana plantations can reduce the risk of spreading the bacteria causing Moko Disease.</string>
    <string name="resistant_varieties">Resistant Varieties:</string>
    <string name="mokodes4">Planting banana varieties that show resistance to Moko Disease can be an effective preventive measure.</string>
    <string name="copper_based_sprays">Copper-based Sprays:</string>
    <string name="mokodes5">Copper-based fungicides or bactericides may be used as a preventive measure, but their effectiveness can be limited.</string>
    <string name="biological_control">Biological Control:</string>
    <string name="mokodes6">Some beneficial microorganisms can be used to control the growth of the bacteria causing Moko Disease. Consult with agricultural experts for appropriate biological control methods.</string>
    <string name="bbtv">TODO</string>
    <string name="bbtv1">Remove Infected Plants:</string>
    <string name="bbtvdes1">The most effective way to control BBTV is to promptly remove and destroy infected banana plants. This helps prevent the spread of the virus to healthy plants.</string>
    <string name="control_aphids">Control Aphids:</string>
    <string name="bbtvdes2">Aphids are vectors that transmit BBTV. Controlling aphid populations through the use of insecticides or natural predators can help reduce the spread of the virus.</string>
    <string name="cultural_practices">Cultural Practices:</string>
    <string name="bbtvdes3">Practicing good hygiene in banana plantations, such as avoiding the sharing of tools and equipment between infected and healthy plants, can help prevent the transmission of the virus.</string>
    <string name="bbtv4">Resistant Varieties:</string>
    <string name="bbtvdes4">Some banana varieties show resistance to BBTV. Consider planting resistant varieties if available in your region.</string>
</resources>