<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText,UseCompoundDrawables">

            <!-- scrollable content goes here -->

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="133dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39"
                app:srcCompat="@drawable/logo2" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="173dp"
                tools:layout_editor_absoluteY="38dp" />

            <TextView
                android:id="@+id/bbtv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Treatment for Banana Bunchy Top Virus"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText"
                />

            <ImageView
                android:id="@+id/bbtvirus"
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/bbtv"
                android:contentDescription="@string/bbtv" />

            <TextView
                android:id="@+id/bbtv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:text="@string/bbtv1" />

            <TextView
                android:id="@+id/bbtvdes1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:textSize="14sp"
                android:text="@string/bbtvdes1"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/bbtv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:text="@string/control_aphids" />

            <TextView
                android:id="@+id/bbtvdes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:textSize="14sp"
                android:text="@string/bbtvdes2"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/textVibbtv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:text="@string/cultural_practices" />

            <TextView
                android:id="@+id/bbtvdes3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:textSize="14sp"
                android:text="@string/bbtvdes3"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/bbtv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:text="@string/bbtv4" />

            <TextView
                android:id="@+id/bbtvdes4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:textSize="14sp"
                android:text="@string/bbtvdes4" />


            <!-- Add more views as needed -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>