<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/percentage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-130dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="246dp"
        android:layout_height="665dp"
        android:layout_marginBottom="88dp"
        android:alpha="0.7"
        android:contentDescription="@string/rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:contentDescription="@string/centerpic"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201"
        app:srcCompat="@drawable/image_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/diseaseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/classification"
        app:layout_constraintBottom_toTopOf="@+id/imageName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/imageName"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:textColor="#FFFFFF"
        android:text="@string/imageName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/confidence"
        app:layout_constraintBottom_toTopOf="@+id/confidenceRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/confidenceRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confidencerate"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonpicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageName"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <TextView
        android:id="@+id/imagename2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonpicture"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginTop="208dp"
        android:text="@string/takepicture"
        android:backgroundTint="#4169E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonupload"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="208dp"
        android:text="@string/upload_image"
        android:backgroundTint="#4169E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/aidicon"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:contentDescription="@string/aidicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/aidicon"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/treatmentbutton"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/button3"
        android:backgroundTint="#4169E1"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpicture"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />




</androidx.constraintlayout.widget.ConstraintLayout>