<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen5">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText,UseCompoundDrawables">

            <!-- scrollable content goes here -->

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="133dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39"
                app:srcCompat="@drawable/logo2" />


            <TextView
                android:id="@+id/tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:text="General Tips to Maintain Healthy Banana Plants"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/centerpic"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/hl" />

            <TextView
                android:id="@+id/tips1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="Nutrient Management:"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tipsdscrpt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tipsdscrpt1"
                android:textSize="14sp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/tips2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="Pruning:"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tipsdscrpt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tipsdscrpt2"
                android:textSize="14sp"
                tools:ignore="VisualLintLongText" />\

            <TextView
                android:id="@+id/tips3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="Clean Tools:"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tipsdscrpt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/tipsdscrpt3"
                android:textSize="14sp"
                tools:ignore="VisualLintLongText" />


            <!-- Add more views as needed -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>